# cmake

./: .gitignore  README.md
generate_bin_install/: CMakeLists.txt  README.md  hello.c
generate_bin_install/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  myapp
linking_lib/: .CMakeLists.txt.swp  CMakeLists.txt  app.c
linking_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  mathapp
linking_lib/_build/lib/: Makefile  cmake_install.cmake
linking_lib/lib/: .CMakeLists.txt.swp  .math.c.swp  .math.h.swp  CMakeLists.txt  math.c  math.h
